<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Projekt_atrakcja</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_logowanie">Logowanie</string>
    <string name="title_activity_rejestracja">Rejestracja</string>
    <string name="action_settings">Settings</string>
    <string name="zaloguj">Zaloguj się</string>
    <string name="rejestracja">Zarejestruj się !</string>
    <string name="login">Login</string>
    <string name="haslo">Hasło</string>
    <string name="powtorzhaslo">Powtórz hasło</string>
    <string name="email">E-mail</string>
    <string name="www_db4free_net">www.db4free.net</string>
    <string name="zapamietaj">zapamietaj mnie</string>
    <string name="profil">Mój profil</string>
    <string name="zmien_haslo">zmień hasło</string>
    <string name="zdjecie">Dodaj zdjęcie</string>
    <string name="oznacz">Oznacz Miejsce</string>
    <string name="title_activity_add_comments">AddComments</string>
    <string name="title_activity_place_view">PlaceView</string>

</resources>
