<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="activites.MainActivity" >

    <EditText
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/login" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/text_haslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_login"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/haslo"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_zaloguj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/zaloguj" 
    	android:onClick="zaloguj"
    	/>

    <Button
        android:id="@+id/button_rejestracja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:onClick="zarejestruj"
        android:text="@string/rejestracja" />

    <CheckBox
        android:id="@+id/check_zapamietaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_rejestracja"
        android:layout_alignRight="@+id/button_zaloguj"
        android:layout_marginBottom="24dp"
        android:text="@string/zapamietaj" />

</RelativeLayout>