<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="activites.DrugaAktywnosc" >

    <EditText
        android:id="@+id/nowe_haslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/haslo_aktualne"
        android:layout_alignStart="@+id/haslo_aktualne"
        android:layout_below="@+id/haslo_aktualne"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/haslo"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/komentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nowe_haslo1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="@drawable/tlo_obrazka"
        android:hint="@string/rejestracja"
        android:minWidth="130dp"
        android:onClick="zarejestruj"
        android:text="@string/rejestracja"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/nowe_haslo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nowe_haslo"
        android:layout_alignStart="@+id/nowe_haslo"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nowe_haslo"
        android:layout_alignStart="@+id/nowe_haslo"
        android:layout_below="@+id/nowe_haslo"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/powtorzhaslo"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/haslo_aktualne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

</RelativeLayout>
